<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signin"
        android:text="sign in"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="bold"
        android:layout_margin="60dp"
        android:gravity="center"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_below="@id/signin"
        android:background="#30FFFFFF"
        android:hint="@string/username"
    android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="20dp" />

    <EditText
        android:id="@+id/password_toggled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30FFFFFF"
        android:drawableStart="@drawable/baseline_info_24"
        android:drawablePadding="20dp"
        android:hint="password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />


    <com.google.android.material.button.MaterialButton

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginbtn"

        android:layout_below="@id/password_toggled"
        android:text="@string/login"
        android:backgroundTint="@color/design_default_color_on_secondary"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgotpassword"
        android:layout_below="@id/loginbtn"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/other"
        android:layout_above="@+id/socialicons"
        android:text="@string/or_sign_in_with"
        android:layout_centerHorizontal="true"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/socialicons"
            android:layout_alignParentBottom="true"
            android:gravity="center">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="20dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/twitter"/>

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/done"
        android:src="@drawable/fb"/>


    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/does"
        android:src="@drawable/google"/>


        </LinearLayout>


</RelativeLayout>




